--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "OOP_LibraryManagement",
+    "name": "oop_limt",
     "version": "1.0.0",
     "description": "A library management system using OOP principles and JavaFX for the GUI.",
     "author": "Phạm Anh Tuấn",
