--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
                         <id>default-cli</id>
                         <configuration>
                             <mainClass>
-                                com.example.oop_librarymanagement/com.example.oop_librarymanagement.HelloApplication
+                                com.limt.Main
                             </mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
