Add Page AddBookWithAPI

--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,16 @@
             <artifactId>charm-glisten</artifactId>
             <version>6.2.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.sarxos</groupId>
+            <artifactId>webcam-capture</artifactId>
+            <version>0.3.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.11.0</version>
+        </dependency>
     </dependencies>
 
     <build>
